# QuantumGuardAI

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml  train_gnn.py
.github/workflows/: ci.yml  release.yml
configs/: default.yaml  production.yam  production.yaml
data/: training_dataset.py
deployments/: Dockerfile  docker-compose.yml
deployments/kubernetes/: deployment.yaml
docs/: architecture.md  index.md  mkdocs.yml
models/: trained_gnn.pt
outputs/: detect_graph.html  detections_history.json  dummy_graph.html  test_graph.html
src/quantumguard/: __init__.py  cli.py
src/quantumguard/agents/: _init__.py  base.py  optimizer.py  response_engine.py  threat_detector.py
src/quantumguard/intel/: free_threat_feed.py  threat_intel_fetcher.py
src/quantumguard/models/: __init__.py  federated.py  gnn.py  quantum_resistant.py
src/quantumguard/privacy/: differential.py  encryption.py
src/quantumguard/tools/: __init__.py  alert_dispatch.py  log_analyzer.py  network_scan.py
src/quantumguard/utils/: config.py  config.py.bak  logging.py  storage.py  viz.py
